# AurelRayTracer

./: .env.cmake  .gitignore  AABB.cpp  AABB.h  Application.cpp  Application.h  ApplicationOld.cpp  ApplicationOld.h  AurellRayTracer.cpp  AurellRayTracer.vcxproj  AurellRayTracer.vcxproj.filters  BSDF.cpp  BSDF.h  BVHBuilder.cpp  BVHBuilder.h  BVHNode.cpp  BVHNode.h  BeckmannSpizzichino.cpp  BeckmannSpizzichino.h  BxDF.cpp  BxDF.h  CMakeLists.txt  Camera.cpp  Camera.h  Distribution1D.cpp  Distribution1D.h  Distribution2D.cpp  Distribution2D.h  Embree.cpp  Embree.h  Film.cpp  FresnelBlend.cpp  FresnelBlend.h  FresnelSpecular.cpp  FresnelSpecular.h  GeometryDataManager.cpp  HitRecord.h  Hitable.cpp  Hitable.h  HitableList.cpp  (+86 more)
Shaders/: CPURTshader.vert  CPURTvert.spv  compile.bat  shader.vert  vert.spv
src/: Application.cpp  Application.h  AurellRayTracer.cpp  BSDF.cpp  BeckmannSpizzichino.cpp  BxDF.cpp  BxDF.h  Camera.cpp  Distribution1D.cpp  Distribution1D.h  Distribution2D.cpp  Distribution2D.h  Embree.cpp  Film.h  FresnelBlend.cpp  HitRecord.h  HitableList.cpp  Integrator.h  LambertianReflection.h  LambertianTransmission.cpp  LambertianTransmission.h  Light.cpp  Light.h  Material.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  OrenNayarReflection.cpp  PathTracer.cpp  PathTracer.h  PixelSampler.h  Ray.h  RayTracer.cpp  RayTracer.h  RenderTests.cpp  Sampler.cpp  Sampler.h  SamplerIntegrator.cpp  SamplerIntegrator.h  Scene.cpp  (+16 more)
